--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-navigation/stack": "^5.2.1",
     "axios": "^0.19.2",
     "expo": "^36.0.2",
+    "firebase": "^7.12.0",
     "install": "^0.13.0",
     "is_js": "^0.9.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
