--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
+    "@react-navigation/bottom-tabs": "^5.2.4",
     "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.2.1",
     "axios": "^0.19.2",
