--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.2.1",
     "axios": "^0.19.2",
+    "base-64": "^0.1.0",
     "expo": "^36.0.2",
     "firebase": "^7.12.0",
     "install": "^0.13.0",
@@ -30,7 +31,8 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
