--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-svg": "9.13.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "victory-native": "^34.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
