--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^7.12.0",
     "install": "^0.13.0",
     "is_js": "^0.9.0",
+    "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -28,6 +29,7 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-svg": "9.13.3",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
