--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.2.1",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
+    "d3-scale": "^3.2.1",
     "expo": "^36.0.2",
     "firebase": "^7.12.0",
     "install": "^0.13.0",
