--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^7.12.0",
     "install": "^0.13.0",
     "is_js": "^0.9.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
